# TD-Toodle-App

./: .gitignore  LICENSE  README.md  pyproject.toml  reauth.ps1  reauth.py  run-bump-overdue.ps1  task.json  task.lst  task_tmp.json  test.json  toodledo-local-mirror-design.md  toodledo-mcp-server.md
.claude/: settings.local.json
config/: config.json  tokens.json
deploy/systemd/: td-bump-overdue.service  td-bump-overdue.timer
deploy/windows/: register-toodledo-mirror-sync.ps1
docs/: add-task.md  configuration.md  how-to-bump-daily.md  list-tasks.md  llm-task-contract.md  mvp-spec.md  openclaw-task-workflow.md  scheduler.md  task-add-skillset.md  toodledo-mirror-sync.md  watchlist-implementation-plan.md
td/: __init__.py  auth.py  cli.py  list_cmd.py  mirror.py  tasks.py
tdmedia/: __init__.py  cli.py  db.py  query.py  sync.py  web.py
tests/: test_mirror.py  test_tasks.py  test_tdmedia.py
toodledo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
