[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "toodledo-cli"
version = "1.0"
description = "Toodledo CLI (MVP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
td = "td.cli:main"
tdmedia = "tdmedia.cli:main"

[tool.setuptools.packages]
find = {}
